@@ -1,4 +1,12 @@
-** v4.32 xx.xx.2019**
+** v4.32 15.09.2019**
+* Fixed EncounterJournal Tab backdrop.
+* Fixed AutoButton Usable Button color options.
+* Added an own Minimap Difficulty Indicator => Text.
+* Added combat hide option for Minimap Buttons.
+* Added own Durability DataText = > MUI Durability
+* Added new Style Panels under my existing Panels.
+* Code cleanup, you dont need to apply twice the install step for ActionBars/UnitFrames.
+
 
 ** v4.31 06.09.2019**
 * Removed my own ProgressBar. Was a good idea, but nah.
@@ -10,12 +18,14 @@
 * Added back TradeSkillTabs.
 * Added FPS and Latency to my MicroButton Time Tooltip.
 
+
 ** v4.30 19.08.2019**
 * More code cleanup.
 * Fixed an issue, which can happen with BenikUI FlightMode.
 * Added a description for my Tags in the UnitFrame options.
 * Added option to change the Paragon Bar Color and Text Style.
 * Added a notification for Paragon Rewards.
+
 
 ** v4.29 18.08.2019**
 * Code Cleanup.
@@ -31,11 +41,13 @@
 * Layout Updates. See inGame changelog info!!
 * Added an own ProgressBar over the Minimap.
 
+
 ** v4.28 05.08.2019**
 * Added Pawn Skin, needs AddOnSkins to work.
 * Adjust some install settings.
 * Added a Paragon Reputation feature.
 * Finally fixed a db error if AAP + HandyNotes are enabled. Big thanks to NihilisticPandemonium <3
+
 
 ** v4.27 29.07.2019**
 * Update some skins.
