@@ -1,6 +1,6 @@
 ## Interface: 80200
 ## Author: Merathilis
-## Version: 4.31
+## Version: 4.32
 ## Title: |cFF00c0faElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -11,7 +11,7 @@
 ## OptionalDeps: SharedMedia, AddOnSkins, BigWigs, ls_Toasts
 ## X-Credits: Benik, Blazeflack, Azilroka, Simpy, NihilisticPandemonium, Darth Predator, fgprodigal, siweia, Solor, Elv & all AddOn Authors who inspired me.
 ## X-ElvVersion: 11.22
-## X-Curse-Packaged-Version: 4.31
+## X-Curse-Packaged-Version: 4.32
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
