@@ -17,14 +17,12 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Removed my own ProgressBar. Was a good idea, but nah",
-		"• Remove transparent options for Bags/ActionBars. Now in ElvUI",
-		"• Enhance AutoButtons",
-		"• Hide the progress Tooltip if Raider.IO is loaded",
-		"• Updated some Skins",
-		"• Code cleanup. And hopefully fix some nil errors",
-		"• Added back TradeSkillTabs",
-		"• Added FPS and Latency to my MicroButton Time Tooltip",
+		"• Fixed EncounterJournal Tab backdrop",
+		"• Fixed AutoButton Usable Button color options",
+		"• Added an own Minimap Difficulty Indicator => Text",
+		"• Added combat hide option for Minimap Buttons",
+		"• Added own Durability DataText = > MUI Durability",
+		"• Added new Style Panels under my existing Panels",
 		-- "• ''",
 	" ",
 	"Notes:",
