@@ -1,5 +1,12 @@
-[b][color=orange]v4.32[/color], xx.xx.2019[/b][list]
-[/list]
+[b][color=orange]v4.32[/color], 15.09.2019[/b][list]
+[*]Fixed EncounterJournal Tab backdrop.
+[*]Fixed AutoButton Usable Button color options.
+[*]Added an own Minimap Difficulty Indicator => Text.
+[*]Added combat hide option for Minimap Buttons.
+[*]Added own Durability DataText = > MUI Durability
+[*]Added new Style Panels under my existing Panels.
+[*]Code cleanup, you dont need to apply twice the install step for ActionBars/UnitFrames.[/list]
+
 
 [b][color=orange]v4.31[/color], 06.09.2019[/b][list]
 [*]Removed my own ProgressBar. Was a good idea, but nah.
@@ -11,12 +18,14 @@
 [*]Added back TradeSkillTabs.
 [*]Added FPS and Latency to my MicroButton Time Tooltip.[/list]
 
+
 [b][color=orange]v4.30[/color], 19.08.2019[/b][list]
 [*]More code cleanup.
 [*]Fixed an issue, which can happen with BenikUI FlightMode.
 [*]Added a description for my Tags in the UnitFrame options.
 [*]Added option to change the Paragon Bar Color and Text Style.
 [*]Added a notification for Paragon Rewards.[/list]
+
 
 [b][color=orange]v4.29[/color], 18.08.2019[/b][list]
 [*]Code Cleanup.
@@ -31,6 +40,7 @@
 [*]Added iFilger Profile.
 [*]Layout Updates. See inGame changelog info!!
 [*]Added an own ProgressBar over the Minimap.[/list]
+
 
 [b][color=orange]v4.28[/color], 05.08.2019[/b][list]
 [*]Added Pawn Skin, needs AddOnSkins to work.
